@startuml

hide circle
hide stereotype
hide empty members

class Usuario{}
class Entidad{}
class Direccion{}
class Token{}
class Mercado{}
class Precio{}
class Operacion{}
class AlertaPrecio{}
class Webhook{}
class Notificacion{}

Usuario --> Entidad : crea
Usuario --> AlertaPrecio : configura
Entidad --> Direccion : agrupa
Direccion --> Operacion : ejecuta
Operacion --> Token : sobre
Token --> Mercado : pertenece a
Token --> Precio : tiene
AlertaPrecio --> Token : monitoriza
AlertaPrecio --> Webhook : notifica via
AlertaPrecio --> Notificacion : genera

note bottom of Mercado
  Spot | PerpNativo | PerpHIP3
end note

@enduml
